<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailActivity">
    <include layout="@layout/view_toolbar" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="4dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/detail"/>
            <TextView
                android:id="@+id/tv_content"
                android:layout_marginLeft="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/deal_state"/>
            <TextView
                android:id="@+id/tv_deal_state"
                android:layout_marginLeft="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/remark"/>
            <TextView
                android:id="@+id/tv_remark"
                android:layout_marginLeft="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/deal_time"/>
            <TextView
                android:id="@+id/tv_deal_time"
                android:layout_marginLeft="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/record_time"/>
            <TextView
                android:id="@+id/tv_record"
                android:layout_marginLeft="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bt_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/back" />


</LinearLayout>